Fix responsive topnav and continue in linear function

--- a/pages/linear_function.html
+++ b/pages/linear_function.html
@@ -28,6 +28,12 @@ Keď si už konečne nájdeš normálnu brigádu, tak aj normálne zarobíš. Da
   <figcaption>Obr. 3.: Tvoj zostatok na účte, keď máš normálnu brigádu.</figcaption>
 </figure>
 
-P.S. dúfam, že si si všimol, že čím viac si odkladáš, tým viac sa každý mesiac zvýši našetrená suma.
+Dúfam, že si si všimol, že čím viac si odkladáš, tým viac sa každý mesiac zvýši našetrená suma. <br /> <br />
+
+Ostaňmne na tej brigáde, kde zarábaš 512 eur. Vieš koľko by si si našetril za mesiac? Za dva? Za desať? Za 1 953,125 mesiaca? Za mesiac to je jasné, to rátať netreba, je to 512 eur. Za dva mesiace je to 512+512=1024 eur. Za desať mesiacov zrátaš 512 desať-krát a za 1 953,125 sa mi ani nechce písať. Ak by si mal zrátavať, že 512+512+512.....+512, trvalo by to asi dlho. Jednoduchšie riešenie je, keď vynásobíš výplatu s počtom mesiacov a máš našetrenú sumu. Takže za 10 mesiacov si našetríš 10*512=5 120 eur a za 1 953,125 mesiacov si našetríš 1 953,125*512=1 000 000. Super! Vďaka matematike teraz vieš, že za 1 953,125 mesiacov (čo je iba necelých 163 rokov), budeš milionár. No neteš sa. <br /> <br />
+
+Keďže matematika má veľmi rada zovšeobecňovanie, nebudeme písať, že: našetrená suma = výplata * počet mesiacov. Je to dlhé a navyše to nesedí, ak by si si odkladal sumu len raz za rok alebo namiesto výplaty by si si odkladal cukríky. Preto budeme písať: $$y = a*x$$
+
+Písmeno y je tá vec, ktorú chceme vedieť. V našom prípade je to našetrená suma. Písmeno x sa nazýva premenná. Je to niečo, čo sa mení. V našom prípadePísmeno a je takzvaná konštanta. Je to niečo, čo sa nemení a ukazuje o koľko sa v každom kroku x
 
 </div>
