--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@ title: Mathematikos
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="assets/images/interesting1.png" style="width:100%">
-  <div class="text">Caption Text</div>
+  <!--div class="numbertext">1 / 3</div-->
+  <img src="assets/images/interesting1.png">
+  <!--div class="text">Caption Text</div-->
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="assets/images/interesting2.png" style="width:100%">
-  <div class="text">Caption Two</div>
+  <!--div class="numbertext">2 / 3</div-->
+  <img src="assets/images/interesting2.png">
+  <!--div class="text">Caption Two</div-->
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="assets/images/interesting3.png" style="width:100%">
-  <div class="text">Caption Three</div>
+  <!--div class="numbertext">3 / 3</div-->
+  <img src="assets/images/interesting3.png">
+  <!--div class="text">Caption Three</div-->
 </div>
 
 </div>
