--- a/pages/vocabulary.html
+++ b/pages/vocabulary.html
@@ -1,11 +1,16 @@
 ---
 layout: default
-title: LinearFunction
+title: Vocabulary
 ---
 
 <div class='content'>
 
 <h1>Matematicko-slovenský slovník</h1>
+
+<div class='vocabLetter'>C</div>
+<div class='vocabEntry'>
+<b>Cifra</b> <div>sú to znaky, ktorými sa zapisujú čísla. Napríklad čísla 842, 248, 482 sú všetky napísané z cifier 2,4,8. Číslo 2 je zapísané cifrou 2. U nás sa používajú tieto cifry: 0,1,2,3,4,5,6,7,8,9.</div>
+</div>
 
 <div class='vocabLetter'>H</div>
 <div class='vocabEntry'>
@@ -19,7 +24,7 @@ title: LinearFunction
 
 <div class='vocabLetter'>L</div>
 <div class='vocabEntry'>
-<b>Lineárny</b> <div>odvodený od slova línia. Línia je čiara. Môže byť priama alebo aj krivá. Pri názve <i>Lineárna funkcia</i> sa myslí rovná čiara. Ak niečo rastie (alebo klesá) lineárne, znamená to, že sa to zväčšuje (zmenšuje) v každom kroku o rovnakú časť (napr. keď si každý mesiac odložíš rovnakú sumu, tak tvoja našetrená suma rastie linárne). </div>
+<b>Lineárny</b> <div>odvodený od slova línia. Línia je čiara. Môže byť priama alebo aj krivá. Pri názve <i>Lineárna funkcia</i> sa myslí rovná čiara. Ak niečo rastie (alebo klesá) lineárne, znamená to, že sa to zväčšuje (zmenšuje) v každom kroku o rovnakú časť (napr. keď si každý mesiac odložíš rovnakú sumu, tak tvoja našetrená suma rastie linárne). Pri takomto raste vzniká v grafe rovná čiara, preto sa rast nazýva linárny.  </div>
 </div>
 
 <div class='vocabLetter'>V</div>
