Add numberSystems and continue in howNnumbersWereBorn

--- a/pages/howNumbersWereBorn.html
+++ b/pages/howNumbersWereBorn.html
@@ -1,60 +1,23 @@
 ---
 layout: default
-title: HowNumbersWereBorn
+title: Ako vznikli čísla
 ---
 
-<div class='content'>
-<h2>Nepozičná sústava</h2>
+<h1>Ako vznikli čísla</h1>
 
-Bol si už v Egypte? Videl si pyramídy? Vedel si, že egypťania vedeli operovať oko? Niektoré egypské objavy používame dodnes. Je to napríklad 365 dňový rok. <!-- https://historyweb.dennikn.sk/clanky/detail/aka-bola-veda-v-starom-egypte --> Nič z toho by nedokázali bez matematiky. Ich výpočtom by však dnes rozumelo len veľmi málo ľudí, pretože nepoužívali také číslá, aké poznáme dnes. Ich čísla vyzerali takto: <br /><br />
+<div class="content">
+Už praveký človek potreboval počítať. Chcel si zrátať dni alebo ulovené zvieratá. Najprv to rátal na prstoch, ale keď zvieratá pribúdali, tak mu už nestačili svoje prsty, ani prsty jeho rodinny a nakoniec mu došli aj prsty kamarátov. Preto si začal robiť zárezy do kostí. To bolo zhruba 40 000 rokov pred našim letopočtom. Ako sa spoločnosť vyvíjala, prestali mu stačiť aj kosti. <br /><br />
 
-<div style=" text-align: center;">
-1: <span style="font-size: 500%">&#x133FA;</span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-10: <span style="font-size: 500%">&#x13386;</span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-100: <span style="font-size: 500%">&#78690;</span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-1000: <span style="font-size: 500%">&#x131BC;</span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-10 000: <span style="font-size: 500%">&#x130AD;</span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-100 000: <span style="font-size: 500%">&#x13190;</span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-1 000 000: <span style="font-size: 500%">&#x13068;</span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-</div>
+Niekedy okolo roku 4 000 pred našim letopočtom začali ľudia používať na počítanie také vypálené kúsky hliny. Na tie kúsky si napísali znak toho, čo počítali. Keď počítali napríklad ovce, písali nejaký znak a keď kozy, tak napísali zase iný znak. Títo ľudia tiež zistili, že keď majú 1 000 oviec, tak spraviť 1 000 kúskov by bolo trochu náročné. Pomohli si znakmi. Pre 1 ovcu bol iný znak ako pre 10 oviec alebo pre 100 oviec. <br /><br />
 
-Čísla zapisovali kombináciou týchto znakov. Ak mali zapísať napríklad číslo 23, tak napísali dva znaky pre desiatku a tri pre jednotku. Čísla mohli zapisovať z prava do ľava, z ľava do prava alebi aj zhora dole. Číslo nezáviselo od umiestnenia znakov, ale od ich počtu. Tu je v hieroglyfoch napísané číslo  121 243:
+Postupom času ľudia zasa čísla vylepšili. Prišli totiž na to, že mať iný znak pre ovcu, iný pre kozu, iný pre zajaca, iný pre to a iný aj pre hento je zbytočné. Vymysleli teda znaky, ktoré reprezentovali iba počet. Tak prišli na svet prvé naozajstné čísla. Narodili sa okolo roku 3 100 pred našim letopočtom. <br /><br />
 
-<div style=" text-align: center;">
-<span style="font-size: 500%">&#x13190;</span>
-<span style="font-size: 500%">&#x130AD;</span>
-<span style="font-size: 500%">&#x130AD;</span>
-<span style="font-size: 500%">&#x131BC;</span>
-<span style="font-size: 500%">&#78690;</span>
-<span style="font-size: 500%">&#78690;</span>
-<span style="font-size: 500%">&#x13386;</span>
-<span style="font-size: 500%">&#x13386;</span>
-<span style="font-size: 500%">&#x13386;</span>
-<span style="font-size: 500%">&#x13386;</span>
-<span style="font-size: 500%">&#x133FA;</span>
-<span style="font-size: 500%">&#x133FA;</span>
-<span style="font-size: 500%">&#x133FA;</span>
-</div>
+Týmto dátumom sme sa dostali až k starovekým civilizáciam. Egypťania, Mayovia, Rimania, Gréci, Sumeri, ale aj Slovania - títo všetci už poznali čísla. Boli to znaky, ktoré označovali určitý počet. 
+<figure>
+  <img src="../assets/images/numSys_AncientNums.png" alt="Míňame 6 eur alebo 490 eur">
+  <figcaption>Obr. 1.: Takto písali čísla ľudia veľmi dávno pred nami.</figcaption>
+</figure>
 
-Takýto spôsob zapisovania znakov sa nazýva nepozičná číselná sústava. Nepozičná preto, lebo hodnota čísla nezávisí od pozície, na ktorom je znak napísaný, ale od počtu znakov. <br /><br />
-
-Vieš pekne kresliť? No nevadí, aj tak si skús v hieroglyfoch napísať číslo 999 999. Ak si si to naozaj vyskúšal napísať, určite oceníš pozičnú sústavu, ktorú používame dnes. My zapíšeme toto číslo 6-timi znakmi a egypťania na to použili 54 znakov. Takže keď sa ti nabudúce nebude chcieť učiť matiku, spomeň si na egyptské deti. Tie kým napísali číslo, tak ty už máš príklad vyrátaný aj dva razy.
-
-<h2>Pozičná sústava</h2>
-Písať v hieroglyfoch dá zabrať, tak sa vrátime k našim číslam. Egypťania mohli písať z ľava do prava alebo aj naopak. Kým pre egypťana bolo číslo 
-<div style=" text-align: center;">
-<span style="font-size: 500%">&#x133FA;</span>
-<span style="font-size: 500%">&#x13386;</span>
-<span style="font-size: 500%">&#x13386;</span>
-</div>
-rovnaké, ako číslo 
-<div style=" text-align: center;">
-<span style="font-size: 500%">&#x13386;</span>
-<span style="font-size: 500%">&#x13386;</span>
-<span style="font-size: 500%">&#x133FA;</span>
-</div>
-u nás je to inak. Pre nás je rozdiel, či kúpime 12 alebo 21 rožkov. U nás z viacerých rôznych cifier dokážeš poskladať rôzne čísla. Napíklad máš cifry 2,4,8 a môžeš z nich zložiť čísla ako 248, 284, 428, 482, 824 a 842.
-
-
-
+My sme si zvykli počet označovať znakmi 0,1,2,3,4,5,6,7,8,9. Tieto naše čísla nie sú žiadna novinka. Používať ich začali v Indii, niekedy na konci staroveku. V 9.-tom storočí nášho letopočtu čísla prevzali Araby a upravili ich do podoby, v ktorej ich poznáme dnes. 
+Znaky, ktorými sa zapisujú čísla sa nazývajú cifry.
 </div>
