Add number systems

--- a/pages/howNumbersWereBorn.html
+++ b/pages/howNumbersWereBorn.html
@@ -10,7 +10,7 @@ Už praveký človek potreboval počítať. Chcel si zrátať dni alebo ulovené
 
 Niekedy okolo roku 4 000 pred našim letopočtom začali ľudia používať na počítanie také vypálené kúsky hliny. Na tie kúsky si napísali znak toho, čo počítali. Keď počítali napríklad ovce, písali nejaký znak a keď kozy, tak napísali zase iný znak. Títo ľudia tiež zistili, že keď majú 1 000 oviec, tak spraviť 1 000 kúskov by bolo trochu náročné. Pomohli si znakmi. Pre 1 ovcu bol iný znak ako pre 10 oviec alebo pre 100 oviec. <br /><br />
 
-Postupom času ľudia zasa čísla vylepšili. Prišli totiž na to, že mať iný znak pre ovcu, iný pre kozu, iný pre zajaca, iný pre to a iný aj pre hento je zbytočné. Vymysleli teda znaky, ktoré reprezentovali iba počet. Tak prišli na svet prvé naozajstné čísla. Narodili sa okolo roku 3 100 pred našim letopočtom. <br /><br />
+Postupom času ľudia zasa čísla vylepšili. Prišli totiž na to, že mať iný znak pre ovcu, iný pre kozu, iný pre zajaca, iný pre to a iný aj pre hento je zbytočné. Vymysleli teda znaky, ktoré reprezentovali iba počet. Tak prišli na svet prvé naozajstné čísla. Narodili sa okolo roku 3 100 pred našim letopočtom. [1] <br /><br />
 
 Týmto dátumom sme sa dostali až k starovekým civilizáciam. Egypťania, Mayovia, Rimania, Gréci, Sumeri, ale aj Slovania - títo všetci už poznali čísla. Boli to znaky, ktoré označovali určitý počet. 
 <figure>
@@ -18,6 +18,9 @@ Týmto dátumom sme sa dostali až k starovekým civilizáciam. Egypťania, Mayo
   <figcaption>Obr. 1.: Takto písali čísla ľudia veľmi dávno pred nami.</figcaption>
 </figure>
 
-My sme si zvykli počet označovať znakmi 0,1,2,3,4,5,6,7,8,9. Tieto naše čísla nie sú žiadna novinka. Používať ich začali v Indii, niekedy na konci staroveku. V 9.-tom storočí nášho letopočtu čísla prevzali Araby a upravili ich do podoby, v ktorej ich poznáme dnes. 
-Znaky, ktorými sa zapisujú čísla sa nazývajú cifry.
+My sme si zvykli počet označovať znakmi 0,1,2,3,4,5,6,7,8,9. Tieto naše čísla nie sú žiadna novinka. Používať ich začali v Indii, niekedy na konci staroveku. V 9.-tom storočí nášho letopočtu čísla prevzali Araby a upravili ich do podoby, v ktorej ich poznáme dnes [2]. Znaky, ktorými sa zapisujú čísla sa nazývajú cifry.
+
+<h2>Zdroje</h2>
+[1] https://en.wikipedia.org/wiki/History_of_ancient_numeral_systems <br />
+[2] https://www.britannica.com/science/numeral/Development-of-modern-numerals-and-numeral-systems#ref797079
 </div>
