Add statistics. Fix page titles

--- a/pages/vocabulary.html
+++ b/pages/vocabulary.html
@@ -1,11 +1,16 @@
 ---
 layout: default
-title: Vocabulary
+title: Matematicko-slovenský slovník
 ---
 
 <div class='content'>
 
 <h1>Matematicko-slovenský slovník</h1>
+
+<div class='vocabLetter'>A</div>
+<div class='vocabEntry'>
+<b>Absolútny</b> <div>Podľa Slovníka súčasného slovenského jazyka[3], absolútny je taký, ktorý nie je ničím podmienený, na ničom nezávisí. Absolútne číslo je také, ktoré od ničoho nezávisí a je vo všeobecnosti platné.</div>
+</div>
 
 <div class='vocabLetter'>C</div>
 <div class='vocabEntry'>
@@ -20,16 +25,50 @@ title: Vocabulary
 <div class='vocabLetter'>K</div>
 <div class='vocabEntry'>
 <b>Konštantný</b> <div>niečo, čo sa nemení. Je to stále rovnaké, nech sa deje, čo sa deje.</div>
+</div><br />
+
+<div class='vocabEntry'>
+<b>Korelácia</b> <div>je to vzájomný vzťah medzi dvomi vecami. Ak nejaké veci medzi sebou súvisia, hovoríme, že je medzi nimi korelácia. Napríklad korelácia bude medzi tým, koľko si peňazí si odkladáš na účet a akú sumu máš na účte. Čím viac si odkladáš, tým budeš mať viac našetrené.</div>
 </div>
 
 <div class='vocabLetter'>L</div>
 <div class='vocabEntry'>
-<b>Lineárny</b> <div>odvodený od slova línia. Línia je čiara. Môže byť priama alebo aj krivá. Pri názve <i>Lineárna funkcia</i> sa myslí rovná čiara. Ak niečo rastie (alebo klesá) lineárne, znamená to, že sa to zväčšuje (zmenšuje) v každom kroku o rovnakú časť (napr. keď si každý mesiac odložíš rovnakú sumu, tak tvoja našetrená suma rastie linárne). Pri takomto raste vzniká v grafe rovná čiara, preto sa rast nazýva linárny.  </div>
+<b>Lineárny</b> <div>v Synonimickom slovníku slovenčiny[1] nájdeme, že slovo lineárny, znamená priamočiary, rovný. Od tohto slova je odvodený aj názov lineárnej funkcie. Ak niečo rastie (alebo klesá) lineárne, znamená to, že sa to zväčšuje (zmenšuje) v každom kroku o rovnakú časť (napr. keď si každý mesiac odložíš rovnakú sumu, tak tvoja našetrená suma rastie linárne). Pri takomto raste vzniká v grafe rovná čiara, preto sa rast nazýva linárny.</div>
 </div>
 
+<div class='vocabLetter'>R</div>
+
+<div class='vocabEntry'>
+<b>Relatívny</b> <div>v Synonimickom slovníku slovenčiny[2] nájdeme, že slovo relatívny, znamená niečo, čo je je vo vzťahu k niečomu, vzťažné, podmienené. V praxi to znamená niečo takéto. Máme 10 jabĺk. To je absolútne množstvo jabĺk, lebo nevieme o tom povedať, či je to veľa alebo málo. Relatívne množstvo to začne byť vtedy, keď to na niečo vztiahneme. Napríklad na počet detí, ktorým jablká rozdelíme. Keď to dáme na desiatu jednému, asi mu aj zle z toho príde. Keď to rozdelíme pre 1 000 detí, tak sa nikomu neujde skoro nič. Desať jabĺk je vzhľadom na jedno dieťa veľa. Desať jabĺk je vzhľadom na 1 000 detí málo. To je tá relativita.</div>
+</div>
+
+<div class='vocabLetter'>S</div>
+<div class='vocabEntry'>
+<b><a id="vocabSuma">Suma $\sum$</a></b> <div>
+Suma je len vznešene zapísané spočítavanie. Keď potrebuješ spočítať nejaké čísla, napr. od 1 po <i>n</i>, tak nemusíš príklad zapísať ako 1+2+3+...+<i>n</i>, ale zapíšeš ich sumou $\sum_{i=1}^{n} i$. Tento zápis znamená asi toto: znak $\sum$ hovorí, že ideme spočítavať. Pod sumou je písmeno <i>i</i> a nad sumou je <i>n</i>. <i>i</i> hovorí, že odkiaľ sa začína spočítavať a <i>n</i> po kiaľ. Postupne sa prechádzajú všetky čísla od <i>i</i> po <i>n</i>, dosadia sa za <i>i</i> do sumy a pripočítava sa to k výsledku. Napríklad sčítanie čísiel do 10 sa zapíše takto: $\sum_{i=1}^{10} i$. V hlave alebo na kalkulačke sa počíta stále rovnako 1+2+3+4+5+6+7+8+9+10=55. Nemusí sa sčítavať iba <i>i</i>, ale môže sa použiť aj ako index k dátam. Ak treba spočítať známky žiakov a spraviť z nich priemer, <i>i</i> bude ako poradové číslo žiaka. Spočítavanie sa zapíše pomocou sumy $\sum_{i=1}^{n} známka\_žiaka_i$. Fungovať to bude tak, že sa zoberie známka prvého žiaka, pripočíta sa k nej známka druhého a postupne sa pripočítajú známky všetkých žiakov. Nie vždy sa zrátavajú známky žiakov, preto ho nahradíme všeobecným zápisom - písmenom <i>x</i>. Suma bude vyzerať $\sum_{i=1}^{n} x_i$. Niekedy sa môže stať, že pred tým, než x pripočítame k ostatným, treba s ním niečo spraviť. Napríklad dať ho na druhú, spraviť z neho sínus alebo použiť naň nejakú inú funkciu. Naríklad chceme spočítavať <i>sin(x)</i>. Suma bude vyzerať takto: $\sum_{i=1}^{n} sin(x_i)$. Tu sa zoberie každý údaj x, spraví sa z neho sínus a pripočíta sa k ostatným.
+</div></div>
+
 <div class='vocabLetter'>V</div>
+
+<div class='vocabEntry'>
+<b>Variabilný</b> <div>niečo, čo sa mení</div>
+</div><br />
+
+
 <div class='vocabEntry'>
 <b>Vertikálny</b> <div>niečo, čo je zvislo</div>
 </div>
+
+<h1>Zdroje</h1>
+
+<div class='literature'>
+[1] Slovník súčasného slovenského jazyka. 2015. Lineárny. https://slovnik.juls.savba.sk/?w=line%C3%A1rny&s=exact&c=Fdf9&cs=&d=kssj4&d=psp&d=sssj&d=scs&d=sss&d=peciar&d=hssjV&d=bernolak&d=noundb&d=locutio&d=obce&d=priezviska&d=un&d=pskcs&d=ma#  <br /><br />
+
+[2] Synonymický slovník slovenčiny. 2004. Relatívny. https://slovnik.juls.savba.sk/?w=relat%C3%ADvne&s=exact&c=6bda&cs=&d=kssj4&d=psp&d=sssj&d=scs&d=sss&d=peciar&d=hssjV&d=bernolak&d=noundb&d=locutio&d=obce&d=priezviska&d=un&d=pskcs&d=ma# <br /><br />
+
+[3] Slovník súčasného slovenského jazyka. 2015. Absolútny. https://slovnik.juls.savba.sk/?w=absol%C3%BAtny&s=exact&c=K7dd&cs=&d=kssj4&d=psp&d=sssj&d=scs&d=sss&d=peciar&d=hssjV&d=bernolak&d=noundb&d=locutio&d=obce&d=priezviska&d=un&d=pskcs&d=ma# <br /><br />
+</div>
+
+
 
 </div>
