--- a/pages/linearFunction.html
+++ b/pages/linearFunction.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: LinearFunction
+title: Lineárna funkcia
 ---
 
 <h1>Lineárna funkcia</h1>
@@ -32,7 +32,7 @@ Dúfam, že si si všimol, že čím viac si odkladáš, tým viac sa každý me
 
 Ostaňme na tej brigáde, kde zarábaš 512 eur. Vieš koľko by si si našetril za mesiac? Za dva? Za desať? Za 1 953,125 mesiaca? Za mesiac to je jasné, to rátať netreba, je to 512 eur. Za dva mesiace je to 512+512=1024 eur. Za desať mesiacov zrátaš 512 desať-krát a za 1 953,125 sa mi ani nechce písať. Ak by si mal zrátavať, že 512+512+512+.....+512, trvalo by to asi dlho. Jednoduchšie riešenie je, keď vynásobíš výplatu s počtom mesiacov a máš našetrenú sumu. Takže za 10 mesiacov si našetríš 10*512=5 120 eur a za 1 953,125 mesiacov si našetríš 1 953,125*512=1 000 000. Super! Vďaka matematike teraz vieš, že za 1 953,125 mesiacov (čo je iba necelých 163 rokov), budeš milionár. No neteš sa. <br /> <br />
 
-Keďže matematika má veľmi rada zovšeobecňovanie, nebudeme písať, že: našetrená suma = výplata * počet mesiacov. Je to dlhé a navyše to nesedí, ak by si si odkladal sumu len raz za rok alebo namiesto výplaty by si si odkladal cukríky. Preto budeme písať: $$y = a.x$$
+Keďže matematika má veľmi rada zovšeobecňovanie, nebudeme písať, že: našetrená suma = výplata * počet mesiacov. Je to dlhé a navyše to nesedí, ak by si si odkladal sumu len raz za rok alebo namiesto výplaty by si si odkladal cukríky. Preto budeme písať: $$y = a \cdot x$$
 
 Písmeno <i>y</i> je tá vec, ktorú chceš vedieť. Môže to byť napríklad našetrená suma. Písmeno <i>x</i> je niečo čo sa mení. V našom prípade je to počet mesiacov, lebo raz chceš vedieť našetrenú sumu po troch mesiacoch, inokedy po desiatich alebo po sto mesiacoch. Pretože sa <i>x</i> mení, nazýva sa premenná. Písmeno <i>a</i> sa nazýva konštanta, pretože sa nemení (krátka odbočka k významu slova: keď je niečo konštantné, tak to znamená, že sa to nemení, je to stále rovnaké). Môžeš si všimnúť, že zmena hodnoty <i>y</i> medzi <i>x</i> a <i>x+1</i> je práve písmenko <i>a</i>. V našom prípade si vyber <i>x</i> akýkoľvek mesiac (napr. mesiac 9), tak <i>x+1</i> je mesiac hneď po ňom (mesiac 10). Rozdiel v úsporách medzi týmito dvomi mesiacmi je práve písmeno <i>a</i>. Tiež si ešte prosím všimni, že čím je <i>a</i> väčšie, tým rýchlejšie rastie našetrená suma. <br /> <br />
 
@@ -43,7 +43,7 @@ V naozajstnom svete však iba nezarábaš, ale aj míňaš. Predstav si, že pri
   <figcaption>Obr. 4.: Tvoj zostatok (skôr úbytok) na účte, keď iba míňaš a nič nezarábaš.</figcaption>
 </figure>
 
-Môžeš si všimnúť, že to funguje rovnako, ako pri zarábaní. Čím viac minieš každý mesiac, tým máš väčšie dlhy. Na tomto príklade sme ti chceli ukázať, že písmeno <i>a</i> v starom známom vzorci $y = a.x$, nemusí byť iba kladné, ale môže ísť aj do mínusu. <br /> <br />
+Môžeš si všimnúť, že to funguje rovnako, ako pri zarábaní. Čím viac minieš každý mesiac, tým máš väčšie dlhy. Na tomto príklade sme ti chceli ukázať, že písmeno <i>a</i> v starom známom vzorci $y = a \cdot x$, nemusí byť iba kladné, ale môže ísť aj do mínusu. <br /> <br />
 
 Poďme pridať do dlhov trochu optimizmu. Teraz sa prenes do situácie, že si zakladáš v banke účet, začínaš brigádu a tete si nezabudol doniesť papierik s potvrdením o návšteve školy. Keď si založíš účet, tak si na nule, žiadne dlhy. Teraz ten optimizmus. Na novučičký účet ti rodičia pošlú stovku, takže nezačínaš vlastne na nule ale na sto eurách. Nech nie je toho dobrého veľa, necháme ťa na brigáde zarábať 50 eur. V grafe to vyzerá takto:
 
@@ -59,9 +59,9 @@ Keď tvoji rodičia nájdu ropu alebo vyhrajú jackpot, tak si predstav, kde by 
   <figcaption>Obr. 6.: Ferko, Jožko a Terezka začínajú šetriť na inej sume.</figcaption>
 </figure>
 
-Teraz pôjdeme zase zovšeobecňovať. Mohol si si všimnúť, že nám tu pribudla nejaká počiatočná suma. Vďaka tomu už v bode 0 na <i>x-ovej</i> osi nie je 0 na osi <i>y</i>. Skratka môžeš začať šetriť aj na inej sume ako na nule. Už si vieš vyrátať, že v tom a v tom mesiaci, akú budeš mať výplatu, keď zarábaš toľko a toľko. Pre osvieženie pamäti je to našetrená suma = výplata * počet mesiacov alebo $y = a.x$. Lenže čo s tou počiatočnou sumou. Tú k tvojim úsporám môžeš jednoducho prirátať. Keď si našetril nejaký peniaz a rodičia ti dali stovku, tak máš o stovku viac. Čiže by sme to mohli zasa napísať ako našetrená suma = výplata * počet mesiacov + počiatočný vklad. Takto to však písať nechceme, lebo zasa to nesedí na všetky situácie (keď napr. šetríš flaškové štuple namiesto eur). Pomôžeme si opäť matematickým zápisom a počiatočnú sumu pridáme do vzorca v podobe písmena <i>b</i>.
+Teraz pôjdeme zase zovšeobecňovať. Mohol si si všimnúť, že nám tu pribudla nejaká počiatočná suma. Vďaka tomu už v bode 0 na <i>x-ovej</i> osi nie je 0 na osi <i>y</i>. Skratka môžeš začať šetriť aj na inej sume ako na nule. Už si vieš vyrátať, že v tom a v tom mesiaci, akú budeš mať výplatu, keď zarábaš toľko a toľko. Pre osvieženie pamäti je to našetrená suma = výplata * počet mesiacov alebo $y = a \cdot x$. Lenže čo s tou počiatočnou sumou. Tú k tvojim úsporám môžeš jednoducho prirátať. Keď si našetril nejaký peniaz a rodičia ti dali stovku, tak máš o stovku viac. Čiže by sme to mohli zasa napísať ako našetrená suma = výplata * počet mesiacov + počiatočný vklad. Takto to však písať nechceme, lebo zasa to nesedí na všetky situácie (keď napr. šetríš flaškové štuple namiesto eur). Pomôžeme si opäť matematickým zápisom a počiatočnú sumu pridáme do vzorca v podobe písmena <i>b</i>.
 
-$$y = a.x + b$$
+$$y = a \cdot x + b$$
 
 Ak vieš čo znamenajú písmená <i>y,x,a,b,</i> tak gratulujeme, práve si pochopil lineárnu funkciu. Ak nevieš, tak sa to bež doučiť, lebo my už končíme. <br /> <br />
 
