New side menu. Statistics is divided to more files

--- a/pages/aGeom_history.html
+++ b/pages/aGeom_history.html
@@ -14,7 +14,7 @@ Jeho život rýchlo preletíme až po dielo La Géométrie, lebo dovtedy len rá
 
 <figure>
   <img src="../assets/images/aGeom_histLaGeometria.png" alt="Rene Descartes, La Géométrie">
-  <figcaption>Obr. 1.: Kusok obsahu zo slávneho Descartovho diela La Géométrie</figcaption>
+  <figcaption>Obr. 1.: Kúsok obsahu zo slávneho Descartovho diela La Géométrie</figcaption>
 </figure>
 
 Okrem Reného Descarta sa na začiatku sedemnásteho storočia narodil aj Pierre de Fermat. Vyštudoval právo a robil právnika niekde v Toulouse. Jeho najväčším koníčkom bola matematika. V tom istom čase, ale nezávisle od Descarta tiež objavil analytickú geometriu. Nevenoval sa jej však tak do hĺbky ako Descartes, tak sa väčšia sláva v tomto poli pripisuje práve Descartovi. Okrem analytickej geometrie sa Fermat venoval aj iným častiam matematiky. Napríklad je starým otcom derivácií. Fermat je pozoruhodný najmä v tom, že matematika bola jeho najobľúbenejšou voľnočasovou aktivitou.<br /><br />
