--- a/pages/aGeom_space.html
+++ b/pages/aGeom_space.html
@@ -9,8 +9,8 @@ title: Priestor
 Analytická geometria, rovnako ako normálna geometria pracuje s rôznymi objektami, ktoré sú v nejakom priestore. My žijeme v trojrozmernom priestore. Máme šírku, hĺbku a výšku. Okrem nášho trojrozmerného priestoru si vieme predstaviť dvojrozmerný, jednorozmerný a nula rozmerný priestor. Dvojrozmerý priestor má iba šírku a výšku, nemá hĺbku. Môžeš si to predstaviť tak, že si na papier nakreslíš svoj vlastný svet. Ľudia v ňom sa budú môcť hýbať iba doprava, doľava, hore a dole. Dozadu a dopredu nebudú môcť ísť. Jednorozmerný priestor je iba priamka. Na nej by vymyslený ľudia mali iba šírku, výšku už nie. Mohli by sa hýbať iba doprava a doľava. Nularozmerný priestor je iba bod, nemá ani šírku, ani hĺbku, ani výšku. Ľudia v ňom by sa nemohli hýbať nikam. <br /><br />
 
 <figure>
-  <img src="../assets/images/aGeom_dimensions.png" alt="Korelácia medzi schopnosťou strieľať a ">
-  <figcaption>Obr. 19.: Tu je pokus ukázať ti rôzne priestory. 3D pristor je náš svet. Má hĺbku, šírku a výšku. 2D priestor je plocha. Má šírku a výšku. 1D priestor je priamka. Má iba šírku. 0D priestor je bod. Nemá žiadny rozmer.</figcaption>
+  <img src="../assets/images/aGeom_dimensions.png" alt="3D, 2D, 1D a 0D priestor">
+  <figcaption>Obr. 1.: Tu je pokus ukázať ti rôzne priestory. 3D pristor je náš svet. Má hĺbku, šírku a výšku. 2D priestor je plocha. Má šírku a výšku. 1D priestor je priamka. Má iba šírku. 0D priestor je bod. Nemá žiadny rozmer.</figcaption>
 </figure>
 
 
