--- a/pages/aGeom_usage.html
+++ b/pages/aGeom_usage.html
@@ -30,7 +30,7 @@ Ak by sme mali používať iba geometriu, vzorec $(a+b)^4$ by neexistoval, preto
 <h1>Zdroje</h1>
 
 <div class='literature'>
-Obrázky použité v obrázku č. 1: https://www.pexels.com/license/
+Obrázky použité v obrázku č. 1: https://www.pexels.com
 </div>
 
 </div>
