--- a/pages/vocabulary.html
+++ b/pages/vocabulary.html
@@ -9,37 +9,42 @@ title: Matematicko-slovenský slovník
 
 <div class='vocabLetter'>A</div>
 <div class='vocabEntry'>
-<b>Absolútny</b> <div>Podľa Slovníka súčasného slovenského jazyka[3], absolútny je taký, ktorý nie je ničím podmienený, na ničom nezávisí. Absolútne číslo je také, ktoré od ničoho nezávisí a je vo všeobecnosti platné.</div>
+<b>Absolútny</b> <div>Podľa Slovníka súčasného slovenského jazyka [3], absolútny je taký, ktorý nie je ničím podmienený, na ničom nezávisí. Absolútne číslo je také, ktoré od ničoho nezávisí a je vo všeobecnosti platné.</div>
 </div>
 
 <div class='vocabLetter'>C</div>
 <div class='vocabEntry'>
-<b>Cifra</b> <div>sú to znaky, ktorými sa zapisujú čísla. Napríklad čísla 842, 248, 482 sú všetky napísané z cifier 2,4,8. Číslo 2 je zapísané cifrou 2. U nás sa používajú tieto cifry: 0,1,2,3,4,5,6,7,8,9.</div>
+<b>Cifra</b> <div>Sú to znaky, ktorými sa zapisujú čísla. Napríklad čísla 842, 248, 482 sú všetky napísané z cifier 2,4,8. Číslo 2 je zapísané cifrou 2. U nás sa používajú tieto cifry: 0,1,2,3,4,5,6,7,8,9.</div>
 </div>
 
 <div class='vocabLetter'>H</div>
 <div class='vocabEntry'>
-<b>Horizontálny</b> <div>niečo, čo je vodorovne</div>
+<b>Horizontálny</b> <div>Niečo, čo je vodorovne</div>
 </div>
 
 <div class='vocabLetter'>K</div>
+
 <div class='vocabEntry'>
-<b>Konštantný</b> <div>niečo, čo sa nemení. Je to stále rovnaké, nech sa deje, čo sa deje.</div>
+<b>Karteziánsky</b> <div>Karteziánsky súradnicový systém nesie meno francúzskeho filozofa a matematika René Descartes-a, po latinsky Renatus Cartesius. Descartes sa venoval analytickej geometrií, ale až o pár storočí neskôr sa dočkal tej nesmiernej cti, že po ňom pomenovali súradnicový systém.</div>
 </div><br />
 
 <div class='vocabEntry'>
-<b>Korelácia</b> <div>je to vzájomný vzťah medzi dvomi vecami. Ak nejaké veci medzi sebou súvisia, hovoríme, že je medzi nimi korelácia. Napríklad korelácia bude medzi tým, koľko si peňazí si odkladáš na účet a akú sumu máš na účte. Čím viac si odkladáš, tým budeš mať viac našetrené.</div>
+<b>Konštantný</b> <div>Niečo, čo sa nemení. Je to stále rovnaké, nech sa deje, čo sa deje.</div>
+</div><br />
+
+<div class='vocabEntry'>
+<b>Korelácia</b> <div>Je to vzájomný vzťah medzi dvomi vecami. Ak nejaké veci medzi sebou súvisia, hovoríme, že je medzi nimi korelácia. Napríklad korelácia bude medzi tým, koľko si peňazí si odkladáš na účet a akú sumu máš na účte. Čím viac si odkladáš, tým budeš mať viac našetrené.</div>
 </div>
 
 <div class='vocabLetter'>L</div>
 <div class='vocabEntry'>
-<b>Lineárny</b> <div>v Synonimickom slovníku slovenčiny[1] nájdeme, že slovo lineárny, znamená priamočiary, rovný. Od tohto slova je odvodený aj názov lineárnej funkcie. Ak niečo rastie (alebo klesá) lineárne, znamená to, že sa to zväčšuje (zmenšuje) v každom kroku o rovnakú časť (napr. keď si každý mesiac odložíš rovnakú sumu, tak tvoja našetrená suma rastie linárne). Pri takomto raste vzniká v grafe rovná čiara, preto sa rast nazýva linárny.</div>
+<b>Lineárny</b> <div>V Synonimickom slovníku slovenčiny [1] nájdeme, že slovo lineárny, znamená priamočiary, rovný. Od tohto slova je odvodený aj názov lineárnej funkcie. Ak niečo rastie (alebo klesá) lineárne, znamená to, že sa to zväčšuje (zmenšuje) v každom kroku o rovnakú časť (napr. keď si každý mesiac odložíš rovnakú sumu, tak tvoja našetrená suma rastie linárne). Pri takomto raste vzniká v grafe rovná čiara, preto sa rast nazýva linárny.</div>
 </div>
 
 <div class='vocabLetter'>R</div>
 
 <div class='vocabEntry'>
-<b>Relatívny</b> <div>v Synonimickom slovníku slovenčiny[2] nájdeme, že slovo relatívny, znamená niečo, čo je je vo vzťahu k niečomu, vzťažné, podmienené. V praxi to znamená niečo takéto. Máme 10 jabĺk. To je absolútne množstvo jabĺk, lebo nevieme o tom povedať, či je to veľa alebo málo. Relatívne množstvo to začne byť vtedy, keď to na niečo vztiahneme. Napríklad na počet detí, ktorým jablká rozdelíme. Keď to dáme na desiatu jednému, asi mu aj zle z toho príde. Keď to rozdelíme pre 1 000 detí, tak sa nikomu neujde skoro nič. Desať jabĺk je vzhľadom na jedno dieťa veľa. Desať jabĺk je vzhľadom na 1 000 detí málo. To je tá relativita.</div>
+<b>Relatívny</b> <div>V Synonimickom slovníku slovenčiny [2] nájdeme, že slovo relatívny, znamená niečo, čo je je vo vzťahu k niečomu, vzťažné, podmienené. V praxi to znamená niečo takéto. Máme 10 jabĺk. To je absolútne množstvo jabĺk, lebo nevieme o tom povedať, či je to veľa alebo málo. Relatívne množstvo to začne byť vtedy, keď to na niečo vztiahneme. Napríklad na počet detí, ktorým jablká rozdelíme. Keď to dáme na desiatu jednému, asi mu aj zle z toho príde. Keď to rozdelíme pre 1 000 detí, tak sa nikomu neujde skoro nič. Desať jabĺk je vzhľadom na jedno dieťa veľa. Desať jabĺk je vzhľadom na 1 000 detí málo. To je tá relativita.</div>
 </div>
 
 <div class='vocabLetter'>S</div>
@@ -51,22 +56,25 @@ Suma je len vznešene zapísané spočítavanie. Keď potrebuješ spočítať ne
 <div class='vocabLetter'>V</div>
 
 <div class='vocabEntry'>
-<b>Variabilný</b> <div>niečo, čo sa mení</div>
+<b>Variabilný</b> <div>Niečo, čo sa mení</div>
 </div><br />
 
+<div class='vocabEntry'>
+<b>Vektor</b> <div>Niečo, čo vyjadruje smer, ktorým sa treba pohnúť a aj veľkosť, o koľko sa treba pohnúť</div>
+</div><br />
 
 <div class='vocabEntry'>
-<b>Vertikálny</b> <div>niečo, čo je zvislo</div>
+<b>Vertikálny</b> <div>Niečo, čo je zvislo</div>
 </div>
 
 <h1>Zdroje</h1>
 
 <div class='literature'>
-[1] Slovník súčasného slovenského jazyka. 2015. Lineárny. https://slovnik.juls.savba.sk/?w=line%C3%A1rny&s=exact&c=Fdf9&cs=&d=kssj4&d=psp&d=sssj&d=scs&d=sss&d=peciar&d=hssjV&d=bernolak&d=noundb&d=locutio&d=obce&d=priezviska&d=un&d=pskcs&d=ma#  <br /><br />
+[1] Slovník súčasného slovenského jazyka. 2015. https://slovnik.juls.savba.sk <br /><br />
 
-[2] Synonymický slovník slovenčiny. 2004. Relatívny. https://slovnik.juls.savba.sk/?w=relat%C3%ADvne&s=exact&c=6bda&cs=&d=kssj4&d=psp&d=sssj&d=scs&d=sss&d=peciar&d=hssjV&d=bernolak&d=noundb&d=locutio&d=obce&d=priezviska&d=un&d=pskcs&d=ma# <br /><br />
+[2] Synonymický slovník slovenčiny. 2004. https://slovnik.juls.savba.sk <br /><br />
 
-[3] Slovník súčasného slovenského jazyka. 2015. Absolútny. https://slovnik.juls.savba.sk/?w=absol%C3%BAtny&s=exact&c=K7dd&cs=&d=kssj4&d=psp&d=sssj&d=scs&d=sss&d=peciar&d=hssjV&d=bernolak&d=noundb&d=locutio&d=obce&d=priezviska&d=un&d=pskcs&d=ma# <br /><br />
+[3] Slovník súčasného slovenského jazyka. 2015. https://slovnik.juls.savba.sk <br /><br />
 </div>
 
 
